--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 
     <script src="https://unpkg.com/vue@3"></script>
 </head>
 <body>
     <div id="app">
-        <h1>{{ message }}</h1>
+        <h1 class="text">{{ message }}</h1>
 
-        <img :src="srcImage">
+        <img class="image" :src="srcImage">
     </div>
 
 
